@@ -19,6 +19,7 @@
 <li><a class="reference" href="#mailman-sf-discard-spam-messages-from-your-sourceforge-mailing-lists" id="id4" name="id4">mailman_sf -- discard spam messages from your SourceForge mailing lists</a></li>
 <li><a class="reference" href="#argparse" id="id5" name="id5">argparse</a></li>
 <li><a class="reference" href="#dns-check" id="id6" name="id6">dns_check</a></li>
+<li><a class="reference" href="#csv-iterate" id="id7" name="id7">csv_iterate</a></li>
 </ul>
 </div>
 <p>Several different extension modules are distributed with twill, under
@@ -131,11 +132,12 @@ submit 0
 <p>The 'argparse' extension module contains one function, 'get_args'.  'get_args'
 loads all of the post-scriptfile command-line arguments into variables, e.g.</p>
 <pre class="literal-block">
-% ./twill-sh script1 script2 script3 -- arg1 arg2 arg3
+% ./twill-sh script1 script2 script3 -- val1 val2 val3
 ...
 &gt;&gt; extend_with argparse
 &gt;&gt; get_args
-&gt;&gt; echo $arg1 $args $arg3
+&gt;&gt; echo &quot;args are $arg1 $args $arg3&quot;
+args are val1 val2 val3
 </pre>
 </div>
 <div class="section" id="dns-check">
@@ -152,6 +154,10 @@ You'll need <a class="reference" href="http://www.dnspython.org/">dnspython</a> 
 <li>dns_ns -- assert that a given hostname is a name server for the given name.</li>
 </ul>
 </blockquote>
+</div>
+<div class="section" id="csv-iterate">
+<h1><a class="toc-backref" href="#id7" name="csv-iterate">csv_iterate</a></h1>
+<p>...</p>
 </div>
 </div>
 </body>
